Fix for license banner page push and tooltip alignment (#3987)

--- a/admin-source-management/app/styles/admin-source-management/rsa-lib/rsa-wizard/_rsa-wizard.scss
+++ b/admin-source-management/app/styles/admin-source-management/rsa-lib/rsa-wizard/_rsa-wizard.scss
@@ -104,6 +104,11 @@
     border-top: 1px solid border-color(primary,light);
     padding-top: rsa-whitespace();
     padding-left: rsa-whitespace();
+
+    position: absolute;
+    bottom: rsa-whitespace(less);
+    background-color: background-color(primary, darkest);
+    width: 98%;
   }
 
   .rsa-wizard-loading-overlay {
